--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
+ 
+  
+  <link rel="stylesheet" href="xyzz.css">
 </head>
 <body class="font-roboto bg-gray-900 text-white">
   <section class="py-20" id="contact">
