--- a/index.html
+++ b/index.html
@@ -34,6 +34,25 @@
       </form>
     </div>
   </section>
+  <section id="home" class="hero">
+        <div class="hero-content">
+            <h2><b>Revolutionizing Drug Discovery with AI</b></h2>
+            <p><mark>Experience the power of AI in medicine. Generate drug recommendations and insights in real-time.</mark></p>
+            <a href="#assistant" class="btn">Try AI Assistant</a>
+        </div>
+    </section>
+    <section id="assistant" class="assistant">
+        <h2>Generative AI Drug Assistant</h2>
+        <div class="assistant-content">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT67geziIQD9iI7AwkOqoYgAHDM_bHMH0wBiA&s" alt="AI Drug Assistant">
+            <p>Our AI-driven system provides expert drug insights, interactions, and alternatives.</p>
+            <button class="btn">Start AI Chat</button>
+        </div>
+    </section>
+    <section id="about" class="about">
+        <h2>About Our AI</h2>
+        <p>Our AI technology leverages deep learning and vast medical databases to assist in drug discovery and recommendations.</p>
+    </section>
 
   <script>
     const form = document.getElementById('contactForm');
